Prevent booking card from shrinking too much on smaller screens.

--- a/static/css/booking-form.css
+++ b/static/css/booking-form.css
@@ -101,13 +101,15 @@ Generic styles are inherited from style.css
     text-decoration: underline;
 }
 
-@media (min-width: 540px) {
-    .sm\:w-half {
-        width: 50%;
-    }
+.card {
+    width: 50%;
 }
 
-/* Expired/ Active Styles for My Bookings Page */
+.authentication-form {
+    margin: 30px 0px;
+}
+
+/* Expired/Active Styles for My Bookings Page */
 
 .expired {
     color: rgb(167, 43, 43);
@@ -117,15 +119,23 @@ Generic styles are inherited from style.css
     color: rgb(35, 95, 35);
 }
 
+/* ---------------------------- Media Queries */
 
-/* On smaller screens, still maintain consistent layout */
+@media (min-width: 540px) {
+    .sm\:w-half {
+        width: 50%;
+    }
+}
+
+
+/* ---------------------------- Smaller Screen Styles : Form & My Bookings */
 @media (max-width: 620px) {
     .formbold-main-wrapper {
         padding: 24px;
     }
 
     .formbold-form-wrapper {
-        max-width: 100%; /* Ensure form takes full width */
+        max-width: 100%;
         padding: 16px;
     }
 
@@ -133,14 +143,23 @@ Generic styles are inherited from style.css
     input[type="date"],
     select {
         width: 80%;
-        /* Make sure all inputs are full-width on smaller screens */
     }
 
     .validity {
-        margin-left: 10px;
+        margin-left: 8px;
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .sub-heading {
+        text-align: center;
+    }
+    
+    .card {
+        min-width: 320px;
     }
 }
 
-.authentication-form {
-    margin: 30px 0px;
-}
+
+
